--- a/connect4.css
+++ b/connect4.css
@@ -8,6 +8,9 @@
 
 /* pieces are div within game table cells: draw as colored circles */
 
+td {
+  position: relative;
+}
 .piece {
   margin: 5px;
   width: 80%;
@@ -15,12 +18,12 @@
   border-radius: 50%;
 }
 
-/* TODO: make pieces red/blue,  depending on player 1/2 piece */
+/*  make pieces red/blue,  depending on player 1/2 piece */
 div .one {
   background-color: red;
 }
 
-.two {
+div .two {
   background-color: blue;
 }
 
@@ -32,4 +35,80 @@ div .one {
 
 #column-top td:hover {
   background-color: gold;
+}
+
+.placed {
+  animation-timing-function: ease-in;
+}
+
+@keyframes drop-5 {
+  from {bottom: 600%}
+  to {bottom: 0%}
+}
+
+.row-5.placed {
+  position: absolute;
+  bottom: 0%;
+  animation-name: drop-5;
+  animation-duration: 600ms;
+}
+
+@keyframes drop-4 {
+  from {bottom: 500%}
+  to {bottom: 0%}
+}
+
+.row-4.placed {
+  position: absolute;
+  bottom: 0%;
+  animation-name: drop-4;
+  animation-duration: 500ms;
+}
+
+@keyframes drop-3 {
+  from {bottom: 400%}
+  to {bottom: 0%}
+}
+
+.row-3.placed {
+  position: absolute;
+  bottom: 0%;
+  animation-name: drop-3;
+  animation-duration: 400ms;
+}
+
+@keyframes drop-2 {
+  from {bottom: 300%}
+  to {bottom: 0%}
+}
+
+.row-2.placed {
+  position: absolute;
+  bottom: 0%;
+  animation-name: drop-2;
+  animation-duration: 300ms;
+}
+
+@keyframes drop-1 {
+  from {bottom: 200%}
+  to {bottom: 0%}
+}
+
+.row-1.placed {
+  position: absolute;
+  bottom: 0%;
+  animation-name: drop-1;
+  animation-duration: 200ms;
+}
+
+@keyframes drop-0 {
+  from {bottom: 100%}
+  to {bottom: 0%}
+}
+
+.row-0.placed {
+  position: absolute;
+  bottom: 0%;
+  animation-name: drop-0;
+  animation-duration: 100ms;
 }
