--- a/connect4.css
+++ b/connect4.css
@@ -1,14 +1,28 @@
-header {
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(44, 168, 218);
+}
+
+h1 {
   text-align: center;
   font-size: 30px;
 }
 
 /* game board table */
 
+#board {
+  background-color: rgb(236, 216, 32);
+}
+
 #board td {
   width: 50px;
   height: 50px;
-  border: solid 1px #666;
+  border: solid 5px rgb(236, 216, 32);
+  border-radius: 50%;
+  background-color: rgb(44, 168, 218);
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -35,73 +49,70 @@ div .two {
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
-  border: dashed 1px lightgray;
+  border: dashed 0px lightgray;
+  border-radius: 0;
+  padding: 5px;
+  background-color: rgb(44, 168, 218);
 }
 
-#column-top td:hover {
+/* #column-top td:hover {
   background-color: gold;
-}
+} */
 
 .placed {
   animation-timing-function: ease-in;
+  position: absolute;
+  bottom: 0%;
+  left: -.05%;
 }
 
+/* animation controls for each row */
 @keyframes drop-5 {
-  from {bottom: 600%}
+  from {bottom: 700%}
   to {bottom: 0%}
 }
 
 .row-5.placed {
-  position: absolute;
-  bottom: 0%;
   animation-name: drop-5;
   animation-duration: 600ms;
 }
 
 @keyframes drop-4 {
-  from {bottom: 500%}
+  from {bottom: 600%}
   to {bottom: 0%}
 }
 
 .row-4.placed {
-  position: absolute;
-  bottom: 0%;
   animation-name: drop-4;
   animation-duration: 500ms;
 }
 
 @keyframes drop-3 {
-  from {bottom: 400%}
+  from {bottom: 475%}
   to {bottom: 0%}
 }
 
 .row-3.placed {
-  position: absolute;
-  bottom: 0%;
   animation-name: drop-3;
   animation-duration: 400ms;
 }
 
 @keyframes drop-2 {
-  from {bottom: 300%}
+  from {bottom: 350%}
   to {bottom: 0%}
 }
 
 .row-2.placed {
-  position: absolute;
-  bottom: 0%;
   animation-name: drop-2;
   animation-duration: 300ms;
 }
 
 @keyframes drop-1 {
-  from {bottom: 200%}
+  from {bottom: 225%}
   to {bottom: 0%}
 }
 
 .row-1.placed {
-  position: absolute;
-  bottom: 0%;
   animation-name: drop-1;
   animation-duration: 200ms;
 }
@@ -112,8 +123,6 @@ div .two {
 }
 
 .row-0.placed {
-  position: absolute;
-  bottom: 0%;
   animation-name: drop-0;
   animation-duration: 100ms;
 }
